# ECE570-Project

./: LICENSE  README.md
pdf/typslides/: _main.typ  bibliography.bib  main.typ  main_milp.typ
pdf/typslides/figures/: SolarSchematic.ipe
project-impl/: CZ_23_04_2026.xlsx  CZ_24_04_2026.xlsx  README.md  data.py  deliverables_figs.py  main.py  milp_test.py  pyproject.toml  refin.txt  solar_lp_model.py  solar_milp_model.py  solar_scheduling.py
