[project]
name = "project-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "open-meteo>=0.4.0",
    "openmeteo-requests>=1.7.5",
    "pandas>=2.0",
    "pvlib>=0.15.0",
    "requests-cache>=1.0",
    "retry-requests>=2.0",
    "solar-milp-model",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
solar-milp-model = { workspace = true }
