[project]
name = "solar-energy-planning"
version = "0.1.0"
description = "Optimal Energy Planning using Solar Forecasted Data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "open-meteo>=0.4.0",
    "openmeteo-requests>=1.7.5",
    "pandas>=2.0",
    "pvlib>=0.15.0",
    "requests-cache>=1.0",
    "retry-requests>=2.0",
    "solar-milp-model",
    "solar-gru",
    "torch>=2.11.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
solar-milp-model = { workspace = true }
solar-gru = { workspace = true }
