[project]
name = "solar-energy-planning"
version = "0.1.0"
description = "Optimal Energy Planning using Solar Forecasted Data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "open-meteo>=0.4.0",
    "openmeteo-requests>=1.7.5",
    "pandas>=2.0",
    "pvlib>=0.15.0",
    "requests-cache>=1.0",
    "retry-requests>=2.0",
    "schedule-model",
    "solar-gru",
    "model-to-solar-plant",
    "solar-mpc",
    "torch>=2.11.0",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "openpyxl>=3.1.5",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
schedule-model = { workspace = true }
solar-gru = { workspace = true }
model-to-solar-plant = { workspace = true }
solar-mpc = { workspace = true }
